ashusvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashusvc1
  name: ashusvc1 # name of service 
spec:
  ports:
  - name: 1234-80
    port: 1234 # port of service 
    protocol: TCP
    targetPort: 80 # app port of pod 
  selector: # Pod FInder 
    run: ashupodew1 # label of my app pod 
  type: NodePort # type of service 
status:
  loadBalancer: {}
