route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ashuapp
        pathType: Prefix
        backend:
          service:
            name: ashulb1
            port:
              number: 80
